bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: object java.lang.Void is not a value
if (message!=Void){
             ^