bdr.BDR.scala.code
var message = litMessage()

if (message!=Void){
  if (message == "R")
  	droite();avance();
  if (message == "L")
  	gauche();avance();
  if (message == "I")
  	recule();droite();droite();
  if (message == "A")
  	avance();
  if (message == "B")
  	avance();avance();
  if (message == "C")
  	avance();avance();avance();
  if (message == "Z")
  	recule();
  if (message == "Y")
  	recule();recule();
  if (message == "X")
  	recule();recule();recule();
}